[package]
name = "allui"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = "A SwiftUI-inspired declarative UI framework for Rust, built on gpui-rs"
license = "MIT"
repository = "https://github.com/AntimaterialLabs/allui-rs"
homepage = "https://github.com/AntimaterialLabs/allui-rs"
documentation = "https://docs.rs/allui"
readme = "README.md"
keywords = ["ui", "gui", "swiftui", "gpui", "declarative"]
categories = ["gui", "graphics", "rendering"]
authors = ["Philip Kluz <hello@antimaterial.dev>"]
exclude = [
    ".github/",
    ".claude/",
    ".plans/",
    "target/",
    "assets/",
    "AGENTS.md",
]

[dependencies]
gpui = "0.2"
gpui-component = "0.5.0"

[dev-dependencies]
gpui-component-assets = "0.5.0"

# Pin zbus ecosystem to avoid ashpd build failure with zbus 5.13.0/zvariant 5.9.0
# See: https://github.com/bilelmoussaoui/ashpd/issues/323
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "=5.12.0"
zbus_macros = "=5.12.0"
zvariant = "=5.8.0"

[[example]]
name = "storybook"
path = "examples/storybook/main.rs"
